# envbasis

./: .gitignore  README.md
cli/: .gitignore  README.md  plan.md  pyproject.toml
cli/docs/: api-contract.md
cli/src/envbasis_cli/: __main__.py  auth.py  client.py  command_support.py  config.py  context.py  contracts.py  main.py  output.py  secret_files.py
cli/src/envbasis_cli/commands/: audit.py  auth.py  environments.py  members.py  project.py  projects.py  secrets.py  tokens.py
cli/tests/: test_audit_commands.py  test_auth_commands.py  test_auth_manager.py  test_client_auth.py  test_environment_commands.py  test_member_commands.py  test_project_commands.py  test_secret_sync_commands.py  test_token_commands.py
console/backend/: .env.example  .gitignore  alembic.ini  architecture.md  plan.md  pyproject.toml  requirements.txt
console/backend/alembic/: env.py
console/backend/alembic/versions/: 20260412_0008_member_permissions_and_audit_visibility.py  20260412_0009_per_member_audit_visibility_and_token_share_manage.py  97ae7c2f088f_merge_heads.py  add_webhooks.py  cli_auth_device_flow.py  initial_schema.py  member_secret_access.py  project_description_and_secret_tombstones.py  project_invitations.py  runtime_token_active_name_uniqueness.py  runtime_token_sharing.py  secret_expiration_dates.py  webhook_delivery_logs.py  webhook_signing_secret_encryption.py
console/backend/app/: __init__.py  main.py
console/backend/tests/: conftest.py  test_audit_logs_api.py  test_members_api.py  test_runtime_tokens_api.py  test_secrets_api.py  test_webhooks_api.py
(+112 files in other folders)
